--- a/layouts/partials/tools.html
+++ b/layouts/partials/tools.html
@@ -1,23 +1,23 @@
 <div class="pt-md-2 pb-md-2 teaser-card-container">
-  <div class="teaser-card">
+  <div class="teaser-card mr-sm-4">
     <h5 class="teaser-card-title">
       Delivery
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
+          <img src="/images/home/logo-avodaq.png">
+        </div>
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding">
           <img src="/images/home/logo-avodaq.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
-        </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
         <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
@@ -26,25 +26,25 @@
       </div>
     </div>
   </div>
-  <div class="teaser-card">
+  <div class="teaser-card mr-lg-4">
     <h5 class="teaser-card-title">
       Delivery
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
+          <img src="/images/home/logo-avodaq.png">
+        </div>
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding">
           <img src="/images/home/logo-avodaq.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
-        </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
         <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
@@ -53,25 +53,25 @@
       </div>
     </div>
   </div>
-  <div class="teaser-card">
+  <div class="teaser-card mr-sm-4 mr-lg-0">
     <h5 class="teaser-card-title">
       Delivery
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
+          <img src="/images/home/logo-avodaq.png">
+        </div>
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding">
           <img src="/images/home/logo-avodaq.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
-        </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
         <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
@@ -80,25 +80,25 @@
       </div>
     </div>
   </div>
-  <div class="teaser-card">
+  <div class="teaser-card mr-lg-4">
     <h5 class="teaser-card-title">
       Delivery
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
+          <img src="/images/home/logo-avodaq.png">
+        </div>
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding">
           <img src="/images/home/logo-avodaq.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
-        </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
         <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
@@ -107,25 +107,25 @@
       </div>
     </div>
   </div>
-  <div class="teaser-card">
+  <div class="teaser-card mr-sm-4">
     <h5 class="teaser-card-title">
       Delivery
     </h5>
     <div class="teaser-card-content">
       <div class="teaser-card-container">
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
+          <img src="/images/home/logo-avodaq.png">
+        </div>
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
         <div class="teaser-card teaser-card--smallPadding">
           <img src="/images/home/logo-avodaq.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
-        <div class="teaser-card teaser-card--smallPadding">
-          <img src="/images/home/logo-avodaq.png">
-        </div>
-        <div class="teaser-card teaser-card--smallPadding">
+        <div class="teaser-card teaser-card--smallPadding mr-4">
           <img src="/images/home/logo-avodaq.png">
         </div>
         <div class="teaser-card teaser-card--outline teaser-card--smallPadding">
