--- a/layouts/index.html
+++ b/layouts/index.html
@@ -201,13 +201,13 @@ page-home
   </div>
 </div>
 
-{{/* Automatic Remediation */}}
-<div class="automatic-remediation">
-  <div class="container pt-5 pb-5">
-    <div class="row pt-md-5 pb-4 pb-md-5">
-      <div class="col-12 col-md-6 pl-0 pr-md-4">
-        <div class="text col-12 teaser-ox">
-          {{ with .Site.GetPage "section" "home/automatic-remediation-left-top" }}
+{{/* Tools */}}
+<div class="tools">
+  <div class="container pt-3 pt-md-5 pb-5">
+    <div class="row">
+      <div class="col-12">
+        <div class="text col-12 teaser-box">
+          {{ with .Site.GetPage "section" "home/tools" }}
             {{ .Content }}
           {{ end }}
         </div>
