--- a/layouts/index.html
+++ b/layouts/index.html
@@ -121,8 +121,8 @@ page-home
 
 {{/* Key Capabilities */}}
   <div class="capabilities">
-    <div class="container teaser-box teaser-box--white pb-5 pt-3 pt-md-5">
-      <div class="row pt-md-3">
+    <div class="container pb-5 pt-3 pt-md-5">
+      <div class="row pt-md-3 teaser-box teaser-box--white">
         <div class="col-12">
           {{ with .Site.GetPage "section" "home/capabilities" }}
           {{ .Content }}
