--- a/layouts/partials/teaser-cards.html
+++ b/layouts/partials/teaser-cards.html
@@ -53,7 +53,7 @@
     </div>
   </div>
 
-  <div class="teaser-card teaser-card--blue pb-4 pb-lg-0">
+  <div class="teaser-card teaser-card--blue">
     <div class="teaser-card-picture">
       <picture>
         <img src="/images/home/capabilities/capabilities-05.svg">
