--- a/layouts/index.html
+++ b/layouts/index.html
@@ -173,7 +173,7 @@ page-home
 </div>
 
 {{/* Keptn Workflows */}}
-<div class="keptn-workflows section-primary-opacity">
+<div class="keptn-workflows">
   <div class="container pt-5 pb-5">
     <div class="row pt-2 pt-md-4 pb-md-2">
       <div class="text col-12 d-flex flex-column justify-content-center">
@@ -207,7 +207,7 @@ page-home
 </div>
 
 {{/* Contact */}}
-{{ partial "contact.html" . }}
+{{ partial "get-started.html" . }}
 
 {{/* Copy Indicator */}}
 {{ partial "copy-indicator.html" . }}
