--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -65,6 +65,7 @@
   // Usage
   .usage {
     background: $primary-home-050;
+
     .usage-item img {
       width: 48px;
       height: 48px;
@@ -116,8 +117,12 @@
   }
 
   // Capabilities
-  .capabilities{
+  .capabilities {
     background: $dark-blue-home-900;
+  }
+
+  .get-started {
+    background: $primary-home-500;
   }
 
   // Kubernetes Cluster
