Update banner color and smallCard flex layout. KEPTN-9719

--- a/assets/scss/components/_teaser.scss
+++ b/assets/scss/components/_teaser.scss
@@ -1,5 +1,5 @@
 .teaser {
-  background-color: $dark-blue-home-700;
+  background-color: $bannerColor-home;
 
   h1 {
     font-weight: $font-weight-semibold !important;
