--- a/assets/scss/general/_variables.scss
+++ b/assets/scss/general/_variables.scss
@@ -43,6 +43,7 @@ $greyscale-home-300: #22222233;
 $greyscale-home-200: #2222221a;
 $greyscale-home-100: #2222220d;
 $textColor-home-900: #262626ff;
+$bannerColor-home: #005593;
 
 
 // Links
