--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -47,6 +47,7 @@
 @import 'components/teaser-card';
 @import 'components/toc';
 @import 'components/toolbar';
+@import 'components/slider';
 
 // Pages
 @import 'pages/404';
