--- a/layouts/index.html
+++ b/layouts/index.html
@@ -158,9 +158,9 @@ page-home
         <div class="splide">
           <div class="splide__track">
             <ul class="splide__list">
-              <li class="splide__slide d-flex" style="height: 380px !important;">
-                <div class="splide__image" style="background-image: url('/images/home/img-client-01.png'); height: 100%; width: 40%;"></div>
-                <div class="splide__content" style="width: 60%;">
+              <li class="splide__slide">
+                <div class="splide__image" style="background-image: url('/images/home/img-client-01.png');"></div>
+                <div class="splide__content">
                   <p>„Keptn allowed us to accelerate our
                     adoption of Kubernetes by at least a
                     year. It’s a unique value proposition
@@ -176,14 +176,16 @@ page-home
                   </p>
                 </div>
               </li>
-              <li class="splide__slide d-flex" style="height: 380px !important;">
-                <div class="splide__image" style="background-image: url('/images/home/img-client-02.png'); height: 100%; width: 40%;"></div>
-                <div class="splide__content" style="width: 60%;">
+              <li class="splide__slide d-flex">
+                <div class="splide__image" style="background-image: url('/images/home/img-client-02.png');"></div>
+                <div class="splide__content">
                   <p>„Keptn allowed us to accelerate our
                     adoption of Kubernetes by at least a
                     year. It’s a unique value proposition
                     that has enabled us to create an
                     intelligent and fully automated
+                    continuous delivery pipeline.“
+                    telligent and fully automated
                     continuous delivery pipeline.“
                   </p>
                   <p class="splide__name">
@@ -194,15 +196,14 @@ page-home
                   </p>
                 </div>
               </li>
-              <li class="splide__slide d-flex" style="height: 380px !important;">
-                <div class="splide__image" style="background-image: url('/images/home/img-client-01.png'); height: 100%; width: 40%;"></div>
-                <div class="splide__content" style="width: 60%;">
+              <li class="splide__slide d-flex">
+                <div class="splide__image" style="background-image: url('/images/home/img-client-02.png');"></div>
+                <div class="splide__content">
                   <p>„Keptn allowed us to accelerate our
                     adoption of Kubernetes by at least a
                     year. It’s a unique value proposition
                     that has enabled us to create an
-                    intelligent and fully automated
-                    continuous delivery pipeline.“
+                    in
                   </p>
                   <p class="splide__name">
                     Sebastian Bonk
