Update slider styles

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -152,7 +152,7 @@ page-home
       </div>
     </div>
   </div>
-  <div class="container pt-5 pb-5 clients">
+  <div class="container pt-5 pb-5 clients pl-0 pr-0 pl-sm-3 pr-sm-3">
     <div class="row pt-2 pt-md-4 pb-md-2">
       <div class="col-12">
         <div class="splide">
