--- a/assets/scss/components/_slider.scss
+++ b/assets/scss/components/_slider.scss
@@ -1,22 +1,24 @@
 .splide {
 
   &__slide {
+    display: flex;
     height: auto !important;
     justify-content: center;
     align-items: center;
     background-color: $white;
     border-radius: 13px;
-    margin-right: 25px !important;
+    margin-right: 10px !important;
 
     @media (min-width: $bp-lg) {
-      width: 700px !important;
+      width: 690px !important;
+      margin-right: 25px !important;
     }
 
     @media (min-width: $bp-xl) {
       display: flex !important;
-      width: 800px !important;
+      width: 830px !important;
       margin-right: 80px !important;
-      height: 380px !important;
+      //height: 380px !important;
     }
   }
 
@@ -34,11 +36,12 @@
   }
 
   &__content {
-    padding: 50px 34px;
+    padding: 25px;
     font-size: 22px;
 
     @media (min-width: $bp-lg) {
       width: 60%;
+      padding: 50px 34px;
     }
   }
 
@@ -47,10 +50,11 @@
     font-family: 'Courier';
     font-weight: $font-weight-bold;
     color: $primary-home-900;
-    margin: 28px 0 0 !important;
+    margin: 28px 0 3px !important;
   }
 
   &__info {
+    font-family: 'Courier';
     font-size: 15px !important;
     color: $primary-home-900;
     margin-bottom: 0 !important;
@@ -64,21 +68,31 @@
       height: 42px;
       background-color: $secondary-home-900;
 
-      @media (min-width: $bp-md) {
-        display: block;
-      }
-
       svg {
         fill: $white;
         margin-top: 6px;
       }
 
-      &--prev {
-        left: -50px;
+      @media (min-width: $bp-lg) {
+        display: block;
+
+        &--prev {
+          left: 10px;
+        }
+
+        &--next {
+          right: 10px;
+        }
       }
 
-      &--next {
-        right: -50px;
+      @media (min-width: $bp-xl) {
+        &--prev {
+          left: -50px;
+        }
+
+        &--next {
+          right: -50px;
+        }
       }
     }
   }
@@ -86,7 +100,7 @@
   .splide__pagination {
     bottom: -42px;
 
-    @media (min-width: $bp-md) {
+    @media (min-width: $bp-lg) {
       display: none !important;
     }
   }
